# pythonCourse

./: README.md  pyproject.toml
src/: logger.py  main.py  reports.py  reports_file.txt  services.py  utils.py  views.py
tests/: reports_file.txt  test_reports.py  test_services.py  test_utils.py  test_views.py
